--- a/index.html
+++ b/index.html
@@ -7,6 +7,45 @@
     <title>Admin Dashboard</title>
   </head>
   <body>
+    <div class="main">
+      <div class="side">
+        <div class="logo">
+          <img src="./icons/view-dashboard.svg" alt="">
+          <div>The Dash</div>
+        </div>
+        <div class="nav">
+          <div class="home icon"><img src="./icons/home.svg" alt=""></div>
+          <div class="home">Home</div>
+          <div class="profile icon"><img src="./icons/card-account-details.svg" alt=""></div>
+          <div class="profile">Profile</div>
+          <div class="messages icon"><img src="./icons/message.svg" alt=""></div>
+          <div class="messages">Messages</div>
+          <div class="history icon"><img src="./icons/clock-time-three-outline.svg" alt=""></div>
+          <div class="history">History</div>
+          <div class="tasks icon"><img src="./icons/note-multiple.svg" alt=""></div>
+          <div class="tasks">Tasks</div>
+          <div class="communities icon"><img src="./icons/account-group.svg" alt=""></div>
+          <div class="communities">Communities</div>
+        </div>
+        <div class="help">
+          <div class="settings icon"><img src="./icons/cog.svg" alt=""></div>
+          <div class="settings">Settings</div>
+          <div class="support icon"><img src="./icons/help-box.svg" alt=""></div>
+          <div class="support">Support</div>
+          <div class="privacy icon"><img src="./icons/shield-check.svg" alt=""></div>
+          <div class="privacy">Privacy</div>
+        </div>
+      </div>
+
+      <div class="header">
+        words
+      </div>
+
+      <div class="dash">
+        woords
+      </div>
+
+    </div>
     
     <script src="index.js"></script>
   </body>
