Set up the header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,31 @@
       </div>
 
       <div class="header">
-        words
+        <div class="headertop">
+          <div class="search">
+            <img src="./icons/magnify.svg" alt="" class="magnifying symbol">
+            <input type="text" class="search">
+          </div>
+          <div class="accountoptions">
+            <img src="./icons/bell-ring-outline.svg" alt="" class="bell symbol">
+            <img src="./icons/bearavi.png" alt="" class="avi">
+            <div class="account">Name Name</div>
+          </div>
+        </div>
+        <div class="headerbottom">
+          <div class="greeting">
+            <img src="./icons/bearavi.png" alt="" class="avi bigger">
+            <div class="hello">
+              <div class="hithere">Hi there,</div>
+              <div class="name">Name Name</div>
+            </div>
+          </div>
+          <div class="buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
+        </div>
       </div>
 
       <div class="dash">
