Establish Projects, Announcements, and Trending

--- a/index.html
+++ b/index.html
@@ -66,7 +66,71 @@
       </div>
 
       <div class="dash">
-        woords
+        <div class="projects">
+          <div class="projectheader">Your Projects</div>
+          <div class="project 1">
+            Project 1
+            <p>
+              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+            </p>
+          </div>
+          <div class="project 2">Project 2
+            <p>
+              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+            </p>
+          </div>
+          <div class="project 3">Project 3
+            <p>
+              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+            </p>
+          </div>
+          <div class="project 4">Project 4
+            <p>
+              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+            </p>
+          </div>
+          <div class="project 5">Project 
+            <p>
+              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+            </p>
+          </div>
+          <div class="project 6">Project 6
+            <p>
+              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+            </p>
+          </div>
+        </div>
+        <div class="feed">
+          <div class="announcements">
+            <div class="announcementsheader">Announcements</div>
+            <div class="announcewrapper">
+              <div class="announce bordertop">Site Maintenace
+                <p>
+                  Lacerspero de pro volectius acea verum re sitia nonse quiduntem rat.
+                </p>
+              </div>
+              <div class="announce borderbandaid">Community Share Day
+                <p>
+                  Lacerspero de pro volectius acea verum re sitia nonse quiduntem rat.
+                </p>
+              </div>
+              <div class="announce borderbottom">Updated Privacy Policy
+                <p>
+                  Lacerspero de pro volectius acea verum re sitia nonse quiduntem rat.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="trending">
+            <div class="trendingheader">Trending</div>
+            <div class="personwrapper">
+              <div class="person bordertop">Person</div>
+              <div class="person">Person</div>
+              <div class="person">Person</div>
+              <div class="person borderbottom">Person</div>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
