Add all icons and hover feedback

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         </div>
         <div class="nav">
           <div class="home icon"><img src="./icons/home.svg" alt=""></div>
-          <div class="home">Home</div>
+          <div class="home hover">Home</div>
           <div class="profile icon"><img src="./icons/card-account-details.svg" alt=""></div>
-          <div class="profile">Profile</div>
+          <div class="profile hover">Profile</div>
           <div class="messages icon"><img src="./icons/message.svg" alt=""></div>
-          <div class="messages">Messages</div>
+          <div class="messages hover">Messages</div>
           <div class="history icon"><img src="./icons/clock-time-three-outline.svg" alt=""></div>
-          <div class="history">History</div>
+          <div class="history hover">History</div>
           <div class="tasks icon"><img src="./icons/note-multiple.svg" alt=""></div>
-          <div class="tasks">Tasks</div>
+          <div class="tasks hover">Tasks</div>
           <div class="communities icon"><img src="./icons/account-group.svg" alt=""></div>
-          <div class="communities">Communities</div>
+          <div class="communities hover">Communities</div>
         </div>
         <div class="help">
           <div class="settings icon"><img src="./icons/cog.svg" alt=""></div>
-          <div class="settings">Settings</div>
+          <div class="settings hover">Settings</div>
           <div class="support icon"><img src="./icons/help-box.svg" alt=""></div>
-          <div class="support">Support</div>
+          <div class="support hover">Support</div>
           <div class="privacy icon"><img src="./icons/shield-check.svg" alt=""></div>
-          <div class="privacy">Privacy</div>
+          <div class="privacy hover">Privacy</div>
         </div>
       </div>
 
@@ -69,35 +69,82 @@
         <div class="projects">
           <div class="projectheader">Your Projects</div>
           <div class="project 1">
-            Project 1
-            <p>
-              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
-            </p>
+            <div>
+              Project 1
+              <p>
+                It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+              </p>
+            </div>
+            <div class="iconoptions">
+              <img src="./icons/star-plus-outline.svg" alt="">
+              <img src="./icons/eye-plus-outline.svg" alt="">
+              <img src="./icons/pencil.svg" alt="">
+            </div>
           </div>
-          <div class="project 2">Project 2
-            <p>
-              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
-            </p>
+          <div class="project 2">
+            <div>
+              Project 2
+              <p>
+                It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+              </p>
+            </div>
+            <div class="iconoptions">
+              <img src="./icons/star-plus-outline.svg" alt="">
+              <img src="./icons/eye-plus-outline.svg" alt="">
+              <img src="./icons/pencil.svg" alt="">
+            </div>
           </div>
-          <div class="project 3">Project 3
-            <p>
-              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
-            </p>
+          <div class="project 3">
+            <div>
+              Project 3
+              <p>
+                It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+              </p>
+            </div>
+            <div class="iconoptions">
+              <img src="./icons/star-plus-outline.svg" alt="">
+              <img src="./icons/eye-plus-outline.svg" alt="">
+              <img src="./icons/pencil.svg" alt="">
+            </div>
           </div>
-          <div class="project 4">Project 4
-            <p>
-              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
-            </p>
+          <div class="project 4">
+            <div>
+              Project 4
+              <p>
+                It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+              </p>
+            </div>
+            <div class="iconoptions">
+              <img src="./icons/star-plus-outline.svg" alt="">
+              <img src="./icons/eye-plus-outline.svg" alt="">
+              <img src="./icons/pencil.svg" alt="">
+            </div>
           </div>
-          <div class="project 5">Project 
-            <p>
-              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
-            </p>
+          <div class="project 5">
+            <div>
+              Project 5
+              <p>
+                It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+              </p>
+            </div>
+            <div class="iconoptions">
+              <img src="./icons/star-plus-outline.svg" alt="">
+              <img src="./icons/eye-plus-outline.svg" alt="">
+              <img src="./icons/pencil.svg" alt="">
+            </div>
           </div>
-          <div class="project 6">Project 6
-            <p>
-              It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
-            </p>
+          <div class="project 6">
+            <div>
+              Project 6
+              <p>
+                It rem simus doluptatiis excero od ma il in poresed utem fuga. Faci qui alit, quam fugitatqui adi dem fuga. Nem volut opta sam quaeptat.
+              </p>
+            </div>
+            <div class="iconoptions">
+              <img src="./icons/star-plus-outline.svg" alt="">
+              <img src="./icons/eye-plus-outline.svg" alt="">
+              <img src="./icons/pencil.svg" alt="">
+            </div>
           </div>
         </div>
         <div class="feed">
@@ -124,10 +171,22 @@
           <div class="trending">
             <div class="trendingheader">Trending</div>
             <div class="personwrapper">
-              <div class="person bordertop">Person</div>
-              <div class="person">Person</div>
-              <div class="person">Person</div>
-              <div class="person borderbottom">Person</div>
+              <div class="person bordertop">
+                <img src="./icons/generic profile.png" alt="">
+                <div>@Account Email<br>Captivating Project</div>
+              </div>
+              <div class="person">
+                <img src="./icons/generic profile.png" alt="">
+                <div>@Account Email<br>Captivating Project</div>
+              </div>
+              <div class="person">
+                <img src="./icons/generic profile.png" alt="">
+                <div>@Account Email<br>Captivating Project</div>
+              </div>
+              <div class="person borderbottom">
+                <img src="./icons/generic profile.png" alt="">
+                <div>@Account Email<br>Captivating Project</div>
+              </div>
             </div>
           </div>
         </div>
